# tegmen

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  README.md  docker-compose.yml  pyproject.toml  verify_project.py
.agent/rules/: test-writing.md
_bmad-output/: project-context.md
_bmad-output/brainstorming/: brainstorming-session-2026-05-18-192157.md  brainstorming-session-2026-05-18-233119.md
_bmad-output/implementation-artifacts/: 1-1-fondation-a2a-et-structure-agent-gourmet.md  1-1-fondation-de-l-agent-et-starter-template-a2a.md  1-2-creation-du-gateway-endpoint-public-maestro.md  1-2-recherche-de-recettes-basique.md  1-3-consultation-du-calendrier-scolaire-mock-en-memoire.md  2-1-anonymisation-pii-et-audit-trail.md  2-1-consultation-des-notes-par-matiere-avec-controle-d-acces.md  2-2-fail-fast-sur-recette-inexistante.md  deferred-work.md  (+33 more)
_plan/: lead_architect.md  task.md
config/: agents.yaml
docs/: A2A.md
scratch/: debug_router.py  test_otel.py
scripts/: README.md  init-multiple-dbs.sh  verify-db-init.sh  verify_all.py
src/: __init__.py
tests/: check_agent_init.py  conftest.py  test_agent_acadomie.py  test_agent_explorer.py  test_agent_gourmet.py  test_agent_gourmet_tools.py  test_agent_maestro.py  test_db_isolation.py  test_e2e_golden_path.py  test_gourmet_tools.py  test_infrastructure_db.py  test_integration_a2a.py  test_maestro_agnostic_encoder.py  test_maestro_escape_commands.py  test_maestro_graceful.py  test_maestro_session.py  test_maestro_sticky_routing.py  test_maestro_trace.py  test_resilience.py  verify_routing.py
(+195 files in other folders)
