[project]
name = "tegmen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.21",
    "asyncpg>=0.31.0",
    "fastapi>=0.124.4",
    "google-adk>=1.18.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "litellm>=1.80.5",
    "python-dotenv>=1.2.1",
    "semantic-router>=0.1.12",
    "sentence-transformers>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
